// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> should match is's snapshot 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
  overflow-wrap: break-word;
  text-align: center;
  border-radius: 0.375rem;
  outline: 2px solid transparent;
  outline-offset: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: auto;
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.25;
  cursor: not-allowed;
}

.emotion-0.small {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  font-family: Sen;
  font-size: 0.75rem;
  line-height: 0.875rem;
  font-weight: normal;
  max-width: 40rem;
}

.emotion-0.medium {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  padding-left: 2rem;
  padding-right: 2rem;
  font-family: Sen;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: normal;
  max-width: 40rem;
}

.emotion-0.large {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  padding-left: 3rem;
  padding-right: 3rem;
  font-family: Sen;
  font-size: 2rem;
  line-height: 2.5rem;
  font-weight: bold;
  max-width: 40rem;
}

.emotion-0.primary {
  background: linear-gradient(
  			91.52deg,
  			rgba(28, 121, 150, 0.8) 0.13%,
  			rgba(179, 129, 0, 0.8) 100%
  		);
}

.emotion-0:hover:not(:disabled):after {
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
}

.emotion-0:before,
.emotion-0:after {
  border-radius: 9999px;
}

.emotion-0:before {
  display: block;
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: absolute;
  left: 0px;
  top: 0px;
  content: '';
  z-index: -2;
}

.emotion-0:after {
  position: absolute;
  top: 0.25rem;
  bottom: 0.25rem;
  right: 0.25rem;
  left: 0.25rem;
  --tw-transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 100ms;
  display: block;
  overflow: hidden;
  content: '';
  z-index: -1;
}

.emotion-0:active:not(:disabled):after {
  position: absolute;
  top: 0.25rem;
  bottom: 0.25rem;
  right: 0.25rem;
  left: 0.25rem;
}

<button
  aria-disabled={false}
  aria-label="button"
  className="emotion-0 medium primary "
  data-testid="button"
  disabled={false}
  role="button"
  type="button"
>
  <span
    aria-hidden={true}
    role="img"
  />
  <span
    aria-hidden={true}
    role="img"
  />
</button>
`;

exports[`<Button> should match is's snapshot for loading state: loading 1`] = `
.emotion-0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  vertical-align: middle;
  --tw-text-opacity: 1;
  color: rgba(255, 255, 255, var(--tw-text-opacity));
  overflow-wrap: break-word;
  text-align: center;
  border-radius: 0.375rem;
  outline: 2px solid transparent;
  outline-offset: 2px;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  pointer-events: auto;
  cursor: pointer;
}

.emotion-0:disabled {
  opacity: 0.25;
  cursor: not-allowed;
}

.emotion-0.small {
  padding-top: 0.5rem;
  padding-bottom: 0.5rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  font-family: Sen;
  font-size: 0.75rem;
  line-height: 0.875rem;
  font-weight: normal;
  max-width: 40rem;
}

.emotion-0.medium {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  padding-left: 2rem;
  padding-right: 2rem;
  font-family: Sen;
  font-size: 0.875rem;
  line-height: 1.125rem;
  font-weight: normal;
  max-width: 40rem;
}

.emotion-0.large {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  padding-left: 3rem;
  padding-right: 3rem;
  font-family: Sen;
  font-size: 2rem;
  line-height: 2.5rem;
  font-weight: bold;
  max-width: 40rem;
}

.emotion-0.primary {
  background: linear-gradient(
  			91.52deg,
  			rgba(28, 121, 150, 0.8) 0.13%,
  			rgba(179, 129, 0, 0.8) 100%
  		);
}

.emotion-0:hover:not(:disabled):after {
  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
  top: 0px;
  bottom: 0px;
  left: 0px;
  right: 0px;
}

.emotion-0:before,
.emotion-0:after {
  border-radius: 9999px;
}

.emotion-0:before {
  display: block;
  width: 100%;
  height: 100%;
  overflow: hidden;
  position: absolute;
  left: 0px;
  top: 0px;
  content: '';
  z-index: -2;
}

.emotion-0:after {
  position: absolute;
  top: 0.25rem;
  bottom: 0.25rem;
  right: 0.25rem;
  left: 0.25rem;
  --tw-transform: translate3d(var(--tw-translate-x), var(--tw-translate-y), 0) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
  transition-duration: 100ms;
  display: block;
  overflow: hidden;
  content: '';
  z-index: -1;
}

.emotion-0:active:not(:disabled):after {
  position: absolute;
  top: 0.25rem;
  bottom: 0.25rem;
  right: 0.25rem;
  left: 0.25rem;
}

<button
  aria-disabled={true}
  aria-label="button"
  className="emotion-0 medium primary "
  data-testid="button"
  disabled={true}
  role="button"
  type="button"
>
  <span
    aria-hidden={true}
    role="img"
  />
  Loading...
  <span
    aria-hidden={true}
    role="img"
  />
</button>
`;
